--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"dev:open": "vite dev --host --open",
 		"build": "vite build",
 		"preview": "vite preview --host --open",
+		"build:preview": "npm run build && npm run preview",
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
