--- a/package.json
+++ b/package.json
@@ -1,55 +1,43 @@
 {
 	"name": "kevinap29.github.io",
 	"version": "0.0.1",
-	"private": true,
+	"type": "module",
 	"scripts": {
-		"dev": "vite dev --host",
-		"dev:open": "vite dev --host --open",
+		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview --host --open",
-		"build:preview": "npm run build && npm run preview",
-		"test": "npm run test:integration && npm run test:unit",
+		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"format:lint": "npm run format && npm run lint",
-		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"lint": "prettier --check . && eslint .",
+		"test:unit": "vitest",
+		"test": "npm run test:unit -- --run"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
-		"@skeletonlabs/skeleton": "2.10.1",
-		"@skeletonlabs/tw-plugin": "0.4.0",
+		"@skeletonlabs/skeleton": "^3.0.0-next.9",
+		"@skeletonlabs/skeleton-svelte": "^1.0.0-next.14",
 		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@tailwindcss/forms": "0.5.7",
-		"@tailwindcss/typography": "0.5.13",
-		"@types/node": "20.14.2",
-		"@typescript-eslint/eslint-plugin": "^6.0.0",
-		"@typescript-eslint/parser": "^6.0.0",
-		"autoprefixer": "10.4.19",
-		"dotenv": "^16.4.5",
-		"eslint": "^8.28.0",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.30.0",
-		"postcss": "8.4.38",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
-		"tailwindcss": "3.4.4",
-		"tslib": "^2.4.1",
+		"eslint-plugin-svelte": "^2.36.0",
+		"globals": "^15.0.0",
+		"prettier": "^3.3.2",
+		"prettier-plugin-svelte": "^3.2.6",
+		"prettier-plugin-tailwindcss": "^0.6.5",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
-		"vite-plugin-tailwind-purgecss": "0.3.3",
-		"vitest": "^1.0.0"
+		"vitest": "^2.0.4"
 	},
-	"type": "module",
 	"dependencies": {
-		"@floating-ui/dom": "1.6.5",
-		"highlight.js": "11.9.0"
+		"@tailwindcss/container-queries": "^0.1.1",
+		"@tailwindcss/forms": "^0.5.9",
+		"@tailwindcss/typography": "^0.5.15"
 	}
 }
