add aria and upgrade package

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -114,5 +114,17 @@
 		"transition",
 		"width",
 		"zIndex"
+	],
+	"cSpell.words": [
+		"banyak",
+		"gemari",
+		"lagi",
+		"membangun",
+		"Oktzh",
+		"QEHN",
+		"saat",
+		"sebuah",
+		"seperti",
+		"Teknologi"
 	]
 }
