add sitemap generation and update build process

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: 'main'
+    branches: ['main']
 
 jobs:
   build_site:
@@ -31,6 +31,9 @@ jobs:
           BASE_PATH: '/${{ github.event.repository.name }}'
         run: |
           npm run build
+      
+      - name: Generate sitemap
+        run: node scripts/generate-sitemap.js
 
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
