--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "vite dev --host",
 		"dev:open": "vite dev --host --open",
-		"build": "vite build",
+		"build": "vite build && node scripts/generate-sitemap.js",
 		"preview": "vite preview --host --open",
 		"build:preview": "npm run build && npm run preview",
 		"test": "npm run test:integration && npm run test:unit",
@@ -40,6 +40,7 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"sveltekit-sitemap": "^1.0.21",
 		"tailwindcss": "3.4.4",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
