--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,14 +32,14 @@ jobs:
         run: |
           npm run build
 
-      - name: Generate sitemap
-        run: node scripts/generate-sitemap.js
+      # - name: Generate sitemap
+      #   run: node scripts/generate-sitemap.js
 
-      - name: Upload Artifacts
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # this should match the `pages` option in your adapter-static options
-          path: 'build/'
+      # - name: Upload Artifacts
+      #   uses: actions/upload-pages-artifact@v3
+      #   with:
+      #     # this should match the `pages` option in your adapter-static options
+      #     path: 'build/'
 
   deploy:
     needs: build_site
